--- a/workflows2/odoo - send whatsapp(MBA).json
+++ b/workflows2/odoo - send whatsapp(MBA).json
@@ -23,22 +23,29 @@
         ],
         [
           {
-            "node": "WhatsApp Business Cloud",
+            "node": "Mandrill",
             "type": "main",
             "index": 0
           },
           {
-            "node": "Mandrill",
+            "node": "WhatsApp Business Cloud3",
             "type": "main",
             "index": 0
           }
         ]
       ]
+    },
+    "WhatsApp Business Cloud3": {
+      "main": [
+        []
+      ]
     }
   },
   "createdAt": "2025-01-29T06:46:41.270Z",
   "id": "XtnicMP9CdBRd6v6",
-  "meta": null,
+  "meta": {
+    "templateCredsSetupCompleted": true
+  },
   "name": "odoo - send whatsapp(MBA)",
   "nodes": [
     {
@@ -90,9 +97,10 @@
       "type": "n8n-nodes-base.whatsApp",
       "typeVersion": 1,
       "position": [
-        940,
+        1520,
         -20
       ],
+      "webhookId": "50ef46d3-bc95-48b9-b229-aec99d26bc62",
       "credentials": {
         "whatsAppApi": {
           "id": "KHcTD6EUGATb3z0D",
@@ -127,7 +135,7 @@
       "type": "n8n-nodes-base.mandrill",
       "typeVersion": 1,
       "position": [
-        940,
+        1160,
         200
       ],
       "credentials": {
@@ -178,6 +186,7 @@
         960,
         460
       ],
+      "webhookId": "6981ffe0-9cc3-454d-8856-68af6a55d6f2",
       "credentials": {
         "whatsAppApi": {
           "id": "KHcTD6EUGATb3z0D",
@@ -233,9 +242,10 @@
       "type": "n8n-nodes-base.whatsApp",
       "typeVersion": 1,
       "position": [
-        940,
+        1160,
         -220
       ],
+      "webhookId": "ef5b2e06-a329-4655-ab2b-9e4e656300b4",
       "credentials": {
         "whatsAppApi": {
           "id": "KHcTD6EUGATb3z0D",
@@ -243,6 +253,50 @@
         }
       },
       "continueOnFail": true
+    },
+    {
+      "parameters": {
+        "phoneNumberId": "108019349036743",
+        "recipientPhoneNumber": "={{ $('Webhook').item.json.body.number }}",
+        "template": "auth_verification_1|en",
+        "components": {
+          "component": [
+            {
+              "bodyParameters": {
+                "parameter": [
+                  {
+                    "text": "={{ $('Webhook').item.json.body.otp }}"
+                  }
+                ]
+              }
+            },
+            {
+              "type": "button",
+              "sub_type": "url",
+              "buttonParameters": {
+                "parameter": {
+                  "payload": "={{ $('Webhook').item.json.body.otp }}"
+                }
+              }
+            }
+          ]
+        }
+      },
+      "type": "n8n-nodes-base.whatsApp",
+      "typeVersion": 1,
+      "position": [
+        1160,
+        -20
+      ],
+      "id": "b978ec7c-21e8-4b69-bf68-3e30ce7f185b",
+      "name": "WhatsApp Business Cloud3",
+      "webhookId": "17ac7a59-0463-4a8b-a5a8-aca62b146dbd",
+      "credentials": {
+        "whatsAppApi": {
+          "id": "KHcTD6EUGATb3z0D",
+          "name": "Secondary | Marketing Miles Education"
+        }
+      }
     }
   ],
   "pinData": {
@@ -272,10 +326,10 @@
           "body": {
             "name": "jithin",
             "email": "jithin.kumar@mileseducation.com",
-            "number": "8792966518",
+            "number": "916238133298",
             "message": "Welcome to US Pathway Miles! Please use the following one-time password (OTP) to log in securely: 856065.If you did not request this OTP, please contact our support immediately",
             "otp": "856065",
-            "type": "meeting",
+            "type": "otp",
             "link": false
           }
         }
@@ -288,6 +342,6 @@
   "staticData": null,
   "tags": [],
   "triggerCount": 1,
-  "updatedAt": "2025-01-29T09:06:36.000Z",
-  "versionId": "fe3f1c57-b806-4333-be55-f6826596152b"
+  "updatedAt": "2025-03-07T06:28:39.000Z",
+  "versionId": "2bf59ac0-4910-4a18-8934-97f33d2eb5ba"
 }
