--- a/workflows2/GA Measurement Protocol - Enrolled.json
+++ b/workflows2/GA Measurement Protocol - Enrolled.json
@@ -1,5 +1,5 @@
 {
-  "active": true,
+  "active": false,
   "connections": {
     "MySQL": {
       "main": [
@@ -346,6 +346,6 @@
   },
   "tags": [],
   "triggerCount": 1,
-  "updatedAt": "2024-09-02T13:29:03.000Z",
+  "updatedAt": "2025-03-31T10:26:16.000Z",
   "versionId": "56030b6b-1fb3-4e23-b9c3-11025f8537a0"
 }
