--- a/workflows2/GA Measurement Protocol - Refunds.json
+++ b/workflows2/GA Measurement Protocol - Refunds.json
@@ -1,5 +1,5 @@
 {
-  "active": true,
+  "active": false,
   "connections": {
     "MySQL": {
       "main": [
@@ -367,6 +367,6 @@
   },
   "tags": [],
   "triggerCount": 1,
-  "updatedAt": "2024-08-22T05:19:33.000Z",
+  "updatedAt": "2025-03-31T10:26:17.000Z",
   "versionId": "9b9d9f5d-3624-4745-bd6b-8560b0841891"
 }
